Fix style error in how solid headings are drawn
Remove box-sizing setting that was recently added because it is now causing a layout issue with border placement.

--- a/headings.less
+++ b/headings.less
@@ -12,19 +12,19 @@
 /**  ───────────────────────────────────────────────────────────────────────────────────────────────
 ***  TABLE OF CONTENTS:
 ***  ────────────────────────────────────────────────────────────────────────────────────────────
-***  §1: h1 elements...........................................................................37
-***  §2: h2 elements...........................................................................53
-***  §3: h3 elements..........................................................................129
-***  §4: h4 elements..........................................................................190
-***  §5: hN elements..........................................................................215
-***  §6: Accessibility friendly classes.......................................................254
-***    >>> §6.1: Spacing......................................................................258
-***    >>> §6.2: Font sizing..................................................................281
-***    >>> §6.3: Line heights.................................................................310
-***    >>> §6.4: Coloring.....................................................................327
-***       →→→ §6.4a: Defaults.................................................................331
-***       →→→ §6.4b: Utility classes..........................................................424
-***    >>> §6.5: Indentation..................................................................327
+***  §1: h1 elements...........................................................................38
+***  §2: h2 elements...........................................................................54
+***  §3: h3 elements..........................................................................131
+***  §4: h4 elements..........................................................................192
+***  §5: hN elements..........................................................................217
+***  §6: Accessibility friendly classes.......................................................257
+***    >>> §6.1: Spacing......................................................................261
+***    >>> §6.2: Font sizing..................................................................284
+***    >>> §6.3: Line heights.................................................................313
+***    >>> §6.4: Coloring.....................................................................330
+***       →→→ §6.4a: Defaults.................................................................334
+***       →→→ §6.4b: Utility classes..........................................................427
+***    >>> §6.5: Indentation..................................................................548
 ***  ───────────────────────────────────────────────────────────────────────────────────────────────
 **/
 
@@ -438,7 +438,6 @@
 			position: relative;
 
 			&::before {
-				box-sizing: border-box;
 				content: "";
 				left: 0;
 				height: 100%;
